Fix Popover overflow

--- a/src/components/Popover/Popover.module.scss
+++ b/src/components/Popover/Popover.module.scss
@@ -48,9 +48,7 @@
 .Content {
   position: relative;
   z-index: 1;
-  padding: 2px;
   border-radius: border-radius(large);
-  overflow: hidden;
 }
 
 .Wrapper {
